--- a/4-FEND-NLP-News-Review/src/client/styles/header.scss
+++ b/4-FEND-NLP-News-Review/src/client/styles/header.scss
@@ -1,5 +1,20 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+    padding: 60px;
+    text-align: center;
+    //background: #1abc9c;
+    background-color:  grey;
+    color: black;
+    font-size: 30px;
+}
+
+//phone
+@media only screen and (max-width: 715px) {
+}
+
+// tablet
+@media only screen and (max-width: 990px) {
+}
+
+// desktop
+@media only screen and (min-width: 901px) {
 }
